[package]
name = "imgui-miniquad-render"
version = "0.1.8"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/imgui-miniquad-render"
repository = "https://github.com/not-fl3/imgui-miniquad-render"
description = "miniquad based minimal imgui application wrapper"

[dependencies]
clipboard = "0.5"
miniquad = { version = "0.3.12" }
glam = {version = "0.8", features = ["scalar-math"] }
imgui = { version = "0.8.2" }

#[patch.crates-io]
#miniquad = { path = '../miniquad' }
